# grp3_projet3_data

./: .gitattributes  .gitignore  EDA_SUMMARY.md  Eda_FakeNewsNet.ipynb  Eda_Val-1.ipynb  Eda_Val-1.ipynb.bak  README.md  domain_shift_results.csv  domain_shift_summary.csv  eda fake news net.ipynb  main.py  pyproject.toml
.claude/: settings.local.json
Djouhra/: pyproject.toml
Djouhra/Djouhra/: README.md
Djouhra/Djouhra/notebook/: Modeles_Avances.ipynb  Modeles_de_Base.ipynb
Djouhra/GRP3_PROJET3_DATA/: main.py
Djouhra/GRP3_PROJET3_DATA/data/traitees/: liar_eda_features.parquet  liar_unifie_raw.parquet
Djouhra/GRP3_PROJET3_DATA/notebook/: EDA_LIAR.ipynb  Evaluation_Hors_Domaine.ipynb  Interpretabilite_Biais.ipynb
Djouhra/data/fusionnes/: liar_unifie.csv
Djouhra/data/modeles/: baseline_linearsvc.joblib  baseline_logreg.joblib  baselines_metrics_test.json  tfidf_vectorizer.joblib
Djouhra/data/traitees/: liar_base_clean.parquet  liar_test.parquet  liar_train.parquet  liar_val.parquet
Djouhra/notebook/: EDA_LIAR.ipynb  Interpretabilite_Biais.ipynb  Modeles_Avances.ipynb  Modeles_de_Base.ipynb
Franck/: README.md  Untitled.ipynb  main.py  pyproject.toml
Franck/app/: app.py  config.py  models.py  preprocessing.py  requirements.txt  train_example.py  train_model.py
Franck/app/Design/: DESIGN (1).md  DESIGN.md
Franck/app/streamlit/: config.py  models.py  requirements.txt
Franck/data/fusionnes/: liar_unifie.csv
Franck/data/modeles/: baseline_linearsvc.joblib  baseline_logreg.joblib  baselines_metrics_test.json
Franck/data/traitees/: liar_base_clean.parquet  liar_eda_features.parquet  liar_test.parquet  liar_train.parquet  liar_unifie_raw.parquet  liar_val.parquet
Franck/models/: baselines_gap_metrics.json  liar_glove_logreg_label_binary.joblib  liar_tfidf_linearsvc_label_binary.joblib  liar_tfidf_logreg_label_binary.joblib  liar_tfidf_smote_linearsvc_label_binary.joblib  liar_tfidf_smote_logreg_label_binary.joblib
Franck/notebook/: .env  EDA_LIAR.ipynb  Evaluation_Hors_Domaine.ipynb  Modeles_Avances.ipynb  Modeles_de_Base.ipynb
Franck/src/: base_model.py
New/: main.py  pyproject.toml
(+148 files in other folders)
