[project]
name = "the-sentinel"
version = "1.0.0"
description = "Detection automatique de fake news politiques - Projet 3 Epitech Digital School"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "plotly>=5.18.0",
    "nbformat>=5.9.0",
    "pyarrow>=15.0.0",
    "nltk>=3.9.0",
    "imbalanced-learn>=0.12.0",
    "joblib>=1.3.0",
    "lime>=0.2.0.1",
    "shap>=0.45.0",
    "torch>=2.2.0",
    "transformers>=4.38.0,<5.0.0",
    "datasets>=2.17.0",
    "gensim>=4.3.0",
    "kaleido>=0.2.1",
    "huggingface-hub[cli]>=1.8.0",
    "accelerate>=1.1.0",
    "kaggle>=2.0.0",
    "xgboost>=2.0.0",
    "tqdm>=4.66.0",
]
