[project]
name = "fake-news-detection"
version = "1.0.0"
description = "Projet 3 — Détection automatique de Fake News politiques"
requires-python = ">=3.10"

dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "nltk",
    "wordcloud",
    "lime",
    "xgboost",
    "sentence-transformers",
    "jupyter",
    "nbconvert",
    "joblib",
    "pyarrow",
    "requests",
    "tqdm",
]

[project.optional-dependencies]
dev = ["ipykernel", "ipywidgets"]

[tool.project]
notebooks_order = [
    "notebook/EDA_LIAR.ipynb",
    "notebook/Modeles_de_Base.ipynb",
    "notebook/Modeles_Avances.ipynb",
    "notebook/Evaluation_Hors_Domaine.ipynb",
    "notebook/Interpretabilite_Biais.ipynb",
]
