[project]
name = "franck"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.8.3",
    "jupyter>=1.1.1",
    "lime>=0.2.0.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "scikit-learn>=1.8.0",
    "shap>=0.51.0",
    "torch>=2.10.0",
    "transformers>=5.3.0",
    "pyarrow>=15.0.0",
    "fastparquet>=0.9.4",
    "fsspec>=2025.11.0",
    "s3fs>=2025.11.0",
    
]
